# TimeUp

src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  timeup.json  timeup.tasks.txt
src-tauri/icons/: icon.icns
src-tauri/src/: localdata.rs  main.rs  prodata.rs
src/CoreModule/: coredata.js
